--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="skill_content">
                 <img src="./img/jest.svg" alt="">
                 <p class="tertiary_text">jest.js</p>
-                <div>
+                <div class="content_bar">
                     <span class="bar"><span class="jest"></span></span>
                     <p>40%</p>
                 </div>
