--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./skillBar.css">
-    <link rel="stylesheet" href="./writeAnimation.css">
+    <link rel="stylesheet" href="./typingAnimation.css">
+    <link rel="stylesheet" href="./nav-bar.css">
     <title>Document</title>
 </head>
 
 <body>
-    <nav>
+    <!-- <nav>
         <div class="logo">
             <div>
                 <h2 class="border">DEV</h2>
@@ -25,6 +26,32 @@
             <li><a href="#skills">Mis habilidades</a></li>
             <button>Contacto</button>
         </ul>
+    </nav> -->
+
+    <nav>
+        <div class="logo">
+            <div>
+                <h2 class="border">DEV</h2>
+                <h2 class="wave">DEV</h2>
+            </div>
+        </div>
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+        </div>
+        <div class="nav-btn">
+            <label for="nav-check">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+        </div>
+
+        <div class="nav-links">
+            <a href="#about">Sobre mí</a>
+            <a href="#projects">Mis projectos</a>
+            <a href="#skills">Mis habilidades</a>
+            <button>Contacto</button>
+        </div>
     </nav>
 
     <section class="presentation-section">
@@ -32,7 +59,8 @@
             <p class="greeting">hola 👋 soy</p>
             <h1>Jhonatan David</h1>
             <p class="rol typing-animation typing-animation--presentation">FRONTEND - DEVELOPER.</p>
-            <p class="description"> Creo soluciones web personalizadas, optimizadas <br> y escalables para impulsar el éxito de tu negocio.
+            <p class="description"> Creo soluciones web personalizadas, optimizadas <br> y escalables para impulsar el
+                éxito de tu negocio.
             </p>
             <a class="download-cv" href="./docs/JhonatanBerriosOlave.pdf" download="documento.pdf">
                 <button class="button-dowloan">Dowloan cv</button>
