--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 éxito de tu negocio.
             </p>
             <a class="download-cv" href="./docs/JhonatanBerriosOlave.pdf" download="documento.pdf">
-                <button class="button-dowloan">Dowloan cv</button>
+                <button class="button-dowloan">Descargar cv</button>
             </a>
         </div>
         <img class="about_photo" src="./img/photo.png" alt="">
