--- a/index.html
+++ b/index.html
@@ -8,26 +8,10 @@
     <link rel="stylesheet" href="./skillBar.css">
     <link rel="stylesheet" href="./typingAnimation.css">
     <link rel="stylesheet" href="./nav-bar.css">
-    <title>Document</title>
+    <title>Jhonatan Berrios</title>
 </head>
 
 <body>
-    <!-- <nav>
-        <div class="logo">
-            <div>
-                <h2 class="border">DEV</h2>
-                <h2 class="wave">DEV</h2>
-            </div>
-        </div>
-
-        <ul>
-            <li><a href="#about">Sobre mí</a></li>
-            <li><a href="#projects">Mis projectos</a></li>
-            <li><a href="#skills">Mis habilidades</a></li>
-            <button>Contacto</button>
-        </ul>
-    </nav> -->
-
     <nav>
         <div class="logo">
             <div>
