--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
         <img class="about_photo" src="./img/aboutPhoto.png" alt="">
         <div class="presentation">
             <p class="rol typing-animation typing-animation--about-us">La tecnología es mi pasión.</p>
-            <p class="description"> Soy un Desarrollador Frontend apasionado y orientado a resultados, con un sólido
-                historial en la creación de interfaces de usuario atractivas y funcionales utilizando React, Ionic y
-                Angular. Mi experiencia abarca el desarrollo de soluciones innovadoras para sistemas ATS, CRM y sitios
-                web de alto rendimiento en el entorno de startups. Me destaco por mi capacidad para impulsar la
-                innovación, mejorar la usabilidad y resolver problemas de manera creativa. Siempre estoy buscando
-                oportunidades para aprender.</p>
+            <p class="description">
+                Soy un desarrollador frontend apasionado y orientado a resultados con 3 años de experiencia en la
+                creación de aplicaciones web innovadoras. He trabajado en startups dinámicas, donde he desarrollado
+                habilidades blandas clave como la adaptabilidad y la colaboración efectiva. Mi enfoque autodidacta me ha
+                permitido dominar diversos frameworks y librerías de JavaScript, para ofrecer
+                soluciones web de alta calidad y con un rendimiento excepcional. Mi objetivo es transformar ideas en
+                experiencias digitales impactantes, adaptándome a las necesidades del proyecto y del equipo.
+            </p>
         </div>
 
     </section>
