--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <a href="#about">Sobre mí</a>
             <a href="#projects">Mis projectos</a>
             <a href="#skills">Mis habilidades</a>
+            <a href="#social">Mis Redes</a>
             <!-- <a href="mailto:jhonatanberriosolave@gmail.com">
                 <button>Contacto</button>
             </a> -->
@@ -76,7 +77,7 @@
 
     </section>
 
-    <h2 id="projects">Mis projectos</h2>
+    <h2 id="projects">Mis proyectos</h2>
 
     <section>
         <div class="grid-projects">
@@ -92,10 +93,10 @@
 
             <div class="card-project">
                 <a href="https://jhonatanbrr.github.io/tasksApp/">
-                    <img class="project-img" src="./img/taskapp.png" alt="">
+                    <img class="project-img" src="./img/text-encryptor.png" alt="">
                     <div class="overlay">
-                        <h1>Task app</h1>
-                        <p>Es una aplicacion de tareas donde puedes crear, tachar, filtar y eliminar tareas</p>
+                        <h1>Text encryptor</h1>
+                        <p>Es una aplicacion de encriptacion y desencriptación de texto</p>
                     </div>
                 </a>
             </div>
@@ -120,75 +121,75 @@
             <div class="skill_content">
                 <img src="./img/css.svg" alt="">
                 <p class="tertiary_text">Css</p>
-                <div class="content_bar">
+                <!-- <div class="content_bar">
                     <span class="bar"><span class="css"></span></span>
                     <p>50%</p>
-                </div>
+                </div> -->
             </div>
 
             <div class="skill_content">
                 <img src="./img/html.svg" alt="">
                 <p class="tertiary_text">Html</p>
-                <div class="content_bar">
+                <!-- <div class="content_bar">
                     <span class="bar"><span class="html"></span></span>
                     <p>95%</p>
-                </div>
+                </div> -->
             </div>
 
             <div class="skill_content">
                 <img src="./img/js.svg" alt="">
                 <p class="tertiary_text">JavaScript</p>
-                <div class="content_bar">
+                <!-- <div class="content_bar">
                     <span class="bar"><span class="javaScript"></span></span>
                     <p>90%</p>
-                </div>
+                </div> -->
             </div>
 
             <div class="skill_content">
                 <img src="./img/ionic.svg" alt="">
                 <p class="tertiary_text">Ionic</p>
-                <div class="content_bar">
+                <!-- <div class="content_bar">
                     <span class="bar"><span class="ionic"></span></span>
                     <p>30%</p>
-                </div>
+                </div> -->
             </div>
 
             <div class="skill_content">
                 <img src="./img/angular.svg" alt="">
                 <p class="tertiary_text">Angular</p>
-                <div class="content_bar">
+                <!-- <div class="content_bar">
                     <span class="bar"><span class="angular"></span></span>
                     <p>60%</p>
-                </div>
+                </div> -->
             </div>
             <div class="skill_content">
                 <img src="./img/reactjs.svg" alt="">
                 <p class="tertiary_text">React</p>
-                <div class="content_bar">
+                <!-- <div class="content_bar">
                     <span class="bar"><span class="react"></span></span>
                     <p>85%</p>
-                </div>
+                </div> -->
             </div>
             <div class="skill_content">
                 <img src="./img/git.svg" alt="">
                 <p class="tertiary_text">Git</p>
-                <div class="content_bar">
+                <!-- <div class="content_bar">
                     <span class="bar"><span class="git"></span></span>
                     <p>70%</p>
-                </div>
+                </div> -->
             </div>
             <div class="skill_content">
                 <img src="./img/jest.svg" alt="">
                 <p class="tertiary_text">jest.js</p>
-                <div class="content_bar">
+                <!-- <div class="content_bar">
                     <span class="bar"><span class="jest"></span></span>
                     <p>40%</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
 
-    <h2>Mis redes</h2>
+    <h2 id="social">Mis redes</h2>
 
     <section>
         <div id="cards" class="section-contact-cards">
