fix url text encryptor

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="card-project">
-                <a href="https://jhonatanbrr.github.io/tasksApp/">
+                <a href="https://jhonatanbrr.github.io/text-encryptor/">
                     <img class="project-img" src="./img/text-encryptor.png" alt="">
                     <div class="overlay">
                         <h1>Text encryptor</h1>
