--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="nav-links">
             <a href="#about">Sobre mí</a>
-            <a href="#projects">Mis projectos</a>
+            <a href="#projects">Mis proyectos</a>
             <a href="#skills">Mis habilidades</a>
             <a href="#social">Mis Redes</a>
             <!-- <a href="mailto:jhonatanberriosolave@gmail.com">
