add: purrfect hire project

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
             </div>
 
             <div class="card-project">
-                <a href="https://jhonatanbrr.github.io/tasksApp/">
-                    <img class="project-img" src="./img/taskapp.png" alt="">
+                <a href="https://purrfecthire.com/">
+                    <img class="project-img" src="./img/web-purrfecthire.png" alt="">
                     <div class="overlay">
-                        <h1>Task app</h1>
-                        <p>Es una aplicacion de tareas donde puedes crear, tachar, filtar y eliminar tareas</p>
+                        <h1>purrfecthire</h1>
+                        <p>Landing page purrfecthire</p>
                     </div>
                 </a>
             </div>
