fix: description projects

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <div class="project-card">
                 <img class="project-image" src="./img/taskapp.png" alt="">
-                <p>Es una aplicacion de tareas donde puedes crear, tachar, filtar y eliminar tareas</p>
+                <p>Aplicacion de tareas donde puedes crear, tachar, filtar y eliminar tareas</p>
                 <div class="project-actions">
                     <a href="https://github.com/jhonatanBrr/tasksApp">
                         <button class="button--secondary">
@@ -100,7 +100,7 @@
 
             <div class="project-card">
                 <img class="project-image" src="./img/text-encryptor.png" alt="">
-                <p>Es una aplicacion de tareas donde puedes crear, tachar, filtar y eliminar tareas</p>
+                <p>Aplicación de encriptado y desencriptado de texto</p>
                 <div class="project-actions">
                     <a href="https://github.com/jhonatanBrr/text-encryptor">
                         <button class="button--secondary">
@@ -117,7 +117,7 @@
 
             <div class="project-card">
                 <img class="project-image" src="./img/web-purrfecthire.png" alt="">
-                <p>Es una aplicacion de tareas donde puedes crear, tachar, filtar y eliminar tareas</p>
+                <p>Web site de purrfecthire</p>
                 <div class="project-actions">
                     <a href="https://purrfecthire.com/">
                         <button class="button--secondary">
@@ -129,7 +129,7 @@
 
             <div class="project-card">
                 <img class="project-image" src="./img/gh.png" alt="">
-                <p>Aplicación de tareas que permite crear, tachar, filtrar y eliminar tareas, implementando buenas prácticas como Redux, arquitectura limpia y TypeScript.</p>
+                <p>Tienda virtual con API de productos, usando Redux, TypeScript y arquitectura limpia.</p>
                 <div class="project-actions">
                     <a href="https://github.com/jhonatanBrr/virtual-shop-ionic">
                         <button class="button--secondary">
