--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p class="greeting">hola 👋 soy</p>
             <h1>Jhonatan David</h1>
             <p class="rol typing-animation typing-animation--presentation">FRONTEND - DEVELOPER.</p>
-            <p class="description"> Creo soluciones web personalizadas, optimizadas <br> y escalables para impulsar el
+            <p class="description"> Creo soluciones web personalizadas, optimizadas y escalables para impulsar el
                 éxito de tu negocio.
             </p>
             <a class="download-cv" href="./docs/JhonatanBerriosOlave.pdf" download="documento.pdf">
@@ -63,14 +63,19 @@
     <section class="presentation-section">
         <img class="about_photo" src="./img/aboutPhoto.png" alt="">
         <div class="presentation">
-            <p class="rol typing-animation typing-animation--about-us">La tecnología es mi pasión.</p>
+            <p class="rol typing-animation typing-animation--about-us">Trabajemos juntos.</p>
             <p class="description">
-                Soy un desarrollador frontend apasionado y orientado a resultados con 3 años de experiencia en la
-                creación de aplicaciones web innovadoras. He trabajado en startups dinámicas, donde he desarrollado
-                habilidades blandas clave como la adaptabilidad y la colaboración efectiva. Mi enfoque autodidacta me ha
-                permitido dominar diversos frameworks y librerías de JavaScript, para ofrecer
-                soluciones web de alta calidad y con un rendimiento excepcional. Mi objetivo es transformar ideas en
-                experiencias digitales impactantes, adaptándome a las necesidades del proyecto y del equipo.
+
+                👨‍💻Soy Desarrollador Frontend especializado en React, Next.js, Angular, e Ionic con 3 años de
+                experiencia creando aplicaciones web 🌐 rápidas, intuitivas y escalables. He trabajado en entornos de
+                startups, donde he aprendido a adaptarme rápidamente y a colaborar de manera efectiva con equipos
+                multidisciplinarios. 🎯 Mi enfoque está en transformar ideas complejas en experiencias digitales
+                impactantes utilizando JavaScript, TypeScript, y herramientas como Jest.js para asegurar la calidad del
+                código.
+
+                💻Domino tecnologías como HTML5, CSS, Bootstrap y Tailwind para crear interfaces modernas y
+                optimizadas.💡Estoy siempre en la búsqueda de nuevas soluciones y mejoras para optimizar la experiencia
+                del usuario y el rendimiento de las aplicaciones.
             </p>
         </div>
 
@@ -79,66 +84,111 @@
     <h2 id="projects">Mis proyectos</h2>
 
     <section>
-        <div class="grid-projects">
+        <div class="flex-projects">
 
             <div class="project-card">
                 <img class="project-image" src="./img/taskapp.png" alt="">
-                <p>Aplicacion de tareas donde puedes crear, tachar, filtar y eliminar tareas</p>
-                <div class="project-actions">
-                    <a href="https://github.com/jhonatanBrr/tasksApp">
-                        <button class="button--secondary">
-                            Code
-                        </button>
-                    </a>
-                    <a href="https://jhonatanbrr.github.io/tasksApp/">
-                        <button class="button--secondary">
-                            Preview
-                        </button>
-                    </a>
+                <div class="project-info">
+                    <h3> Taskapp React</h3>
+                    <p class="project-description">Taskapp en React para gestionar tareas: crea, tacha, filtra y elimina
+                        tareas de manera sencilla. Organiza tus pendientes con una interfaz intuitiva y rápida.</p>
+                    <div class="chip-technology">
+                        <img src="./img/reactjs.svg" width="20" alt="">
+                        <p>React</p>
+                    </div>
+                    <dic class="project-actions">
+                        <a href="https://github.com/jhonatanBrr/tasksApp">
+                            <button>Code</button>
+                        </a>
+                        <a href="https://jhonatanbrr.github.io/tasksApp/">
+                            <button>Preview</button>
+                        </a>
+                    </dic>
                 </div>
             </div>
 
             <div class="project-card">
                 <img class="project-image" src="./img/text-encryptor.png" alt="">
-                <p>Aplicación de encriptado y desencriptado de texto</p>
-                <div class="project-actions">
-                    <a href="https://github.com/jhonatanBrr/text-encryptor">
-                        <button class="button--secondary">
-                            Code
-                        </button>
-                    </a>
-                    <a href="https://jhonatanbrr.github.io/text-encryptor/">
-                        <button class="button--secondary">
-                            Preview
-                        </button>
-                    </a>
+                <div class="project-info">
+                    <h3>Encriptador de texto</h3>
+                    <p class="project-description">Aplicación para encriptar y desencriptar texto usando JavaScript,
+                        HTML5 y CSS. Convierte tus mensajes en código y recupéralos fácilmente.</p>
+                    <div class="project-chip-list">
+                        <div class="chip-technology">
+                            <img src="./img/js.svg" width="20" alt="">
+                            <p>JavaScript</p>
+                        </div>
+                        <div class="chip-technology">
+                            <img src="./img/html.svg" width="20" alt="">
+                            <p>HTML5</p>
+                        </div>
+                        <div class="chip-technology">
+                            <img src="./img/css.svg" width="20" alt="">
+                            <p>Css</p>
+                        </div>
+                    </div>
+                    <dic class="project-actions">
+                        <a href="https://github.com/jhonatanBrr/text-encryptor">
+                            <button>Code</button>
+                        </a>
+                        <a href="https://jhonatanbrr.github.io/text-encryptor/">
+                            <button>Preview</button>
+                        </a>
+                    </dic>
                 </div>
             </div>
 
             <div class="project-card">
                 <img class="project-image" src="./img/web-purrfecthire.png" alt="">
-                <p>Web site de purrfecthire</p>
-                <div class="project-actions">
-                    <a href="https://purrfecthire.com/">
-                        <button class="button--secondary">
-                            Preview
-                        </button>
-                    </a>
+                <div class="project-info">
+                    <h3>Web site de purrfecthire</h3>
+                    <p class="project-description">Sitio web de PurrfectHire creado con Next.js y Tailwind. Proporciona
+                        una experiencia rápida y fluida para conectar talento con oportunidades laborales.</p>
+                    <div class="project-chip-list">
+                        <div class="chip-technology">
+                            <img src="./img/nextjs.svg" width="20" alt="">
+                            <p>Nextjs</p>
+                        </div>
+                        <div class="chip-technology">
+                            <img src="./img/tailwindcss.svg" width="20" alt="">
+                            <p>Tailwind</p>
+                        </div>
+                    </div>
+                    <dic class="project-actions">
+                        <a href="https://purrfecthire.com/">
+                            <button>Preview</button>
+                        </a>
+                    </dic>
                 </div>
             </div>
 
             <div class="project-card">
                 <img class="project-image" src="./img/gh.png" alt="">
-                <p>Tienda virtual con API de productos, usando Redux, TypeScript y arquitectura limpia.</p>
-                <div class="project-actions">
-                    <a href="https://github.com/jhonatanBrr/virtual-shop-ionic">
-                        <button class="button--secondary">
-                            code
-                        </button>
-                    </a>
+                <div class="project-info">
+                    <h3>Tienda Virtual</h3>
+                    <p class="project-description">Tienda virtual con API de productos falsa, que permite filtrar, y agregar productos a favoritos, usando Redux, TypeScript y
+                        arquitectura limpia.</p>
+                    <div class="project-chip-list">
+                        <div class="chip-technology">
+                            <img src="./img/ionic.svg" width="20" alt="">
+                            <p>Ionic</p>
+                        </div>
+                        <div class="chip-technology">
+                            <img src="./img/redux.svg" width="20" alt="">
+                            <p>Redux Toolkit</p>
+                        </div>
+                        <div class="chip-technology">
+                            <img src="./img/typescript.svg" width="20" alt="">
+                            <p>TypeScript</p>
+                        </div>
+                    </div>
+                    <dic class="project-actions">
+                        <a href="https://github.com/jhonatanBrr/virtual-shop-ionic">
+                            <button>Code</button>
+                        </a>
+                    </dic>
                 </div>
             </div>
-
         </div>
 
         </div>
@@ -180,6 +230,10 @@
             <div class="skill_content">
                 <img src="./img/reactjs.svg" alt="">
                 <p class="tertiary_text">React</p>
+            </div>
+            <div class="skill_content">
+                <img src="./img/nextjs.svg" alt="">
+                <p class="tertiary_text">Nextjs</p>
             </div>
             <div class="skill_content">
                 <img src="./img/git.svg" alt="">
