fix: desing responsive

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <h2 id="about">Sobre mí</h2>
 
-    <section class="presentation-section">
+    <section>
         <img class="about_photo" src="./img/aboutPhoto.png" alt="">
         <div class="presentation">
             <p class="rol typing-animation typing-animation--about-us">Trabajemos juntos.</p>
