feact: favicon, add new project

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./styles/style-variables.css">
     <link rel="stylesheet" href="./styles/card-project.css">
     <link rel="stylesheet" href="./styles/button.css">
+
+    <link rel="icon" type="image/png" href="./img/aboutPhoto.png">
     <title>Jhonatan Berrios</title>
 </head>
 
@@ -185,6 +187,32 @@
                     <dic class="project-actions">
                         <a href="https://github.com/jhonatanBrr/virtual-shop-ionic">
                             <button>Code</button>
+                        </a>
+                    </dic>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <img class="project-image" src="./img/landing-page-bonsai.png" alt="">
+                <div class="project-info">
+                    <h3>Landing page bonsai</h3>
+                    <p class="project-description">ssdf</p>
+                    <div class="project-chip-list">
+                        <div class="chip-technology">
+                            <img src="./img/reactjs.svg" width="20" alt="">
+                            <p>React</p>
+                        </div>
+                        <div class="chip-technology">
+                            <img src="./img/typescript.svg" width="20" alt="">
+                            <p>TypeScript</p>
+                        </div>
+                    </div>
+                    <dic class="project-actions">
+                        <a href="https://github.com/jhonatanBrr/landing-page-bonsai">
+                            <button>Code</button>
+                        </a>
+                        <a href="https://jhonatanbrr.github.io/landing-page-bonsai/">
+                            <button>Preview</button>
                         </a>
                     </dic>
                 </div>
