fix: description project landing bonsai

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
                 <img class="project-image" src="./img/gh.png" alt="">
                 <div class="project-info">
                     <h3>Tienda Virtual</h3>
-                    <p class="project-description">Tienda virtual con API de productos falsa, que permite filtrar, y agregar productos a favoritos, usando Redux, TypeScript y
+                    <p class="project-description">Tienda virtual con API de productos falsa, que permite filtrar, y
+                        agregar productos a favoritos, usando Redux, TypeScript y
                         arquitectura limpia.</p>
                     <div class="project-chip-list">
                         <div class="chip-technology">
@@ -196,7 +197,8 @@
                 <img class="project-image" src="./img/landing-page-bonsai.png" alt="">
                 <div class="project-info">
                     <h3>Landing page bonsai</h3>
-                    <p class="project-description">ssdf</p>
+                    <p class="project-description">Landing page de bonsáis creada con React y TypeScript, donde se
+                        muestran árboles de amigos y se comparte información básica sobre el mundo del bonsái.</p>
                     <div class="project-chip-list">
                         <div class="chip-technology">
                             <img src="./img/reactjs.svg" width="20" alt="">
