fix: skills section

--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
 
             <div class="skill_content">
                 <img src="./img/js.svg" alt="">
-                <p class="tertiary_text">JavaScript</p>
+                <p class="tertiary_text">Js</p>
             </div>
 
             <div class="skill_content">
                 <img src="./img/typescript.svg" alt="">
-                <p class="tertiary_text">TypeScript</p>
+                <p class="tertiary_text">Ts</p>
             </div>
 
             <div class="skill_content">
